# fm-ai-tools-hub

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260618_0001_create_core_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin_tools.py  auth.py  imports.py  page_content.py  public_tools.py  update_logs.py
backend/app/cli/: daily_update.py  import_tools.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  guide.py  import_batch.py  taxonomy.py  tool.py  user.py
backend/app/schemas/: import_payload.py  page_content.py  tool.py  update_log.py
backend/app/services/: import_tools.py  sensitive_scan.py
backend/tests/: conftest.py  test_auth_api.py  test_config.py  test_daily_update_cli.py  test_dev_port_config.py  test_import_cli.py  test_import_service.py  test_models.py  test_page_content_api.py  test_public_admin_api.py  test_sensitive_scan.py  test_update_log_api.py
docs/: ARCHITECTURE.md  CLEANUP-CANDIDATES.md  DEPLOYMENT.md  PRD.md
docs/superpowers/plans/: 2026-06-18-e2e-testing.md  (+5 more)
docs/testing/: e2e-fixes.md
fixtures/: sample-tool-import.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: toolvault.spec.ts
frontend/src/: App.tsx  styles.css
imports/: page-content-plan.json  toolvault-import-preview.json
scripts/: run-dev.sh  run-e2e.sh
(+24 files in other folders)
